[gd_scene load_steps=14 format=3 uid="uid://4ly04duxj5fu"]

[ext_resource type="Script" path="res://Scenes/Interface/unit_portrait.gd" id="1_5p2e6"]
[ext_resource type="Texture2D" uid="uid://cii37ffppbca" path="res://Art/32x32_white_square.png" id="1_yonm2"]
[ext_resource type="Script" path="res://Scenes/Interface/portrait_image.gd" id="3_3dlx2"]
[ext_resource type="PackedScene" uid="uid://ya6n76mrdy5b" path="res://Scenes/Interface/health_bar.tscn" id="3_o2cqk"]
[ext_resource type="PackedScene" uid="uid://dtr0fngxikvrt" path="res://equipment_icon.tscn" id="3_thmnd"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_c2xu1"]

[sub_resource type="Animation" id="Animation_ei3io"]
length = 0.001

[sub_resource type="Animation" id="Animation_m4y84"]
resource_name = "portrait_select"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0hqsc"]
_data = {
"RESET": SubResource("Animation_ei3io"),
"portrait_select": SubResource("Animation_m4y84")
}

[sub_resource type="Animation" id="Animation_wkcdt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4rcc0"]
resource_name = "hit_portrait_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.419608), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qalq6"]
resource_name = "reload_finished_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4vrfe"]
_data = {
"RESET": SubResource("Animation_wkcdt"),
"hit_portrait_animation": SubResource("Animation_4rcc0"),
"reload_finished_animation": SubResource("Animation_qalq6")
}

[node name="UnitPortrait" type="Control"]
custom_minimum_size = Vector2(165, 50)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -36.0
offset_right = 50.0
offset_bottom = 14.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_5p2e6")

[node name="TempBugfix" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("PlaceholderTexture2D_c2xu1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0hqsc")
}
speed_scale = 10.0

[node name="PortraitImage" type="TextureRect" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -25.0
offset_right = 55.0
offset_bottom = 25.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("1_yonm2")
expand_mode = 1
script = ExtResource("3_3dlx2")

[node name="ShortCutLabel" type="Label" parent="PortraitImage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 14
text = "1"

[node name="HitShadow" type="ColorRect" parent="PortraitImage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="PortraitImage/HitShadow"]
libraries = {
"": SubResource("AnimationLibrary_4vrfe")
}

[node name="UnconsciousShadow" type="ColorRect" parent="PortraitImage"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.635294)

[node name="HealthBar" parent="PortraitImage" instance=ExtResource("3_o2cqk")]
custom_minimum_size = Vector2(10, 4)
layout_mode = 1
anchors_preset = 12
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 2.0
offset_right = 0.0
offset_bottom = 6.0
grow_vertical = 0

[node name="ExperienceBar" parent="PortraitImage" instance=ExtResource("3_o2cqk")]
custom_minimum_size = Vector2(10, 4)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 6.0
offset_right = 0.0
offset_bottom = 10.0
grow_vertical = 0
bar_color = Color(0.289395, 0.496626, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 59.0
grow_horizontal = 0
alignment = 1

[node name="CurrentSlot" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 0

[node name="MainWeaponIcon" parent="VBoxContainer/CurrentSlot" instance=ExtResource("3_thmnd")]
custom_minimum_size = Vector2(40, 20)
layout_mode = 1

[node name="OtherSlot" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(70, 25)
layout_mode = 2
size_flags_horizontal = 0

[node name="SecondaryWeaponIcon" parent="VBoxContainer/OtherSlot" instance=ExtResource("3_thmnd")]
custom_minimum_size = Vector2(35, 15)
layout_mode = 1
